[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanitarian-agent"
version = "1.0.0"
description = "Humanitarian Aid Allocation OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
